﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-08-10 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/danish: Updated, thanks to AlleyKat - dk_alleykat
    * lang/catalan update, thanks to Xavier Navarro (xavin)
    * lang/galician: Update, thanks to Xosé Calvo - xosecalvo.
    * lang/estonian: Update, thanks to Marko Ellermaa - uhuu
    * lang/russian: update, thanks to Gosha Sakovich - gt2
    * libraries/common.lib.php: bug #1534475, arbitrary server

2006-08-09 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/mysql_charsets.lib.php: bug #1530574:
      MySQL 4.1.13 and double quotes in SHOW VARIABLES,
      thanks to Herve Pages
    * docs.css, Documentation.html: bug #1446538, FAQ numbers missing
    * libraries/display_select_lang.lib.php, lang/*: $strLanguage

2006-08-08 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php: added a FIXME for db copy with Add Constraints 
      and mysql extension

2006-08-05 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/export/sql.php: bug #1527862, export foreign keys is broken
    in latest CVS

2006-08-04 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_operations.php, libraries/export/sql.php:
      bug #1526000, copying table to another db (MYSQL 5.0.24)
    * db_details_structure.php: bug #1530574, misaligned HTML 
      when db_collation is empty

2006-08-03 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    *  libraries/dbi/mysqli.dbi.lib.php PMA_DBI_try_query(): do not force
       MYSQLI_USE_RESULT if not requested, makes PMA_DBI_num_rows() not to work

2006-08-02 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.8.2.1 released from MAINT_2_8_2

2006-08-02 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css\phpmyadmin.css.php, themes\darkblue_orange\css\theme_right.css.php
      themes\darkblue_orange\layout.inc.php, themes\original\layout.inc.php
      themes\original\css\theme_left.css.php,