@@ -77,6 +77,21 @@ div#leftframelinks a:hover {
     color:              <?php echo $GLOBALS['cfg']['NaviPointerColor']; ?>;
 }
 
+/* serverlist */
+#body_leftFrame #list_server {
+    list-style-image: url(../<?php echo $GLOBALS['cfg']['ThemePath']; ?>/original/img/s_host.png);
+    list-style-position: inside;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+#body_leftFrame #list_server li {
+    margin: 0;
+    padding: 0;
+    font-size:          80%;
+}
+
 /* leftdatabaselist */
 div#left_tableList ul {
     list-style-type:    none;
@@ -92,12 +107,14 @@ div#left_tableList ul ul {
 }
 
 div#left_tableList a {
-    color:              inherit;
+    background:         <?php echo $GLOBALS['cfg']['NaviBackground']; ?>;
+    color:              <?php echo $GLOBALS['cfg']['NaviColor']; ?>;
     text-decoration:    none;
 }
 
 div#left_tableList a:hover {
-    color:              inherit;
+    background:         <?php echo $GLOBALS['cfg']['NaviBackground']; ?>;
+    color:              <?php echo $GLOBALS['cfg']['NaviColor']; ?>;
     text-decoration:    underline;
 }
 
@@ -107,8 +124,18 @@ div#left_tableList li {
     white-space:        nowrap;
 }
 
+<?php if ($GLOBALS['cfg']['BrowseMarkerColor']) { ?>
+/* marked items */
+div#left_tableList > ul li.marked > a,
+div#left_tableList > ul li.marked {
+    background: <?php echo $GLOBALS['cfg']['BrowseMarkerBackground']; ?>;
+    color: <?php echo $GLOBALS['cfg']['BrowseMarkerColor']; ?>;
+}
+<?php } ?>
+
 <?php if ( $GLOBALS['cfg']['LeftPointerEnable'] ) { ?>
-div#left_tableList li:hover {
+div#left_tableList > ul li:hover > a,
+div#left_tableList > ul li:hover {
     background:         <?php echo $GLOBALS['cfg']['NaviPointerBackground']; ?>;
     color:              <?php echo $GLOBALS['cfg']['NaviPointerColor']; ?>;
 }
